<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title" />

    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_url_default_value"
        android:key="url"
        android:summary="@string/settings_url_summary"
        android:title="@string/settings_url_title" />

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/settings_accuracy_names"
        android:entryValues="@array/settings_accuracy_values"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        android:title="@string/settings_accuracy_title" />

    <EditTextPreference
        android:defaultValue="300"
        android:key="interval"
        android:inputType="number"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="distance"
        android:inputType="number"
        android:summary="@string/settings_distance_summary"
        android:title="@string/settings_distance_title" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="angle"
        android:inputType="number"
        android:summary="@string/settings_angle_summary"
        android:title="@string/settings_angle_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="buffer"
        android:summaryOff="@string/settings_buffer_off_summary"
        android:summaryOn="@string/settings_buffer_on_summary"
        android:title="@string/settings_buffer" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wakelock"
        android:summaryOff="@string/settings_wakelock_off_summary"
        android:summaryOn="@string/settings_wakelock_on_summary"
        android:title="@string/settings_wakelock" />

    <ListPreference
        android:defaultValue="en"
        android:entries="@array/settings_language_entries"
        android:entryValues="@array/settings_language_values"
        android:key="language"
        android:summary="@string/settings_language_summary"
        android:title="@string/settings_language_title" />

    <Preference
        android:key="logout"
        android:title="@string/logout"
        android:summary="@string/logout_summary"
        android:icon="@drawable/ic_logout" />
        <!-- Reusing status icon or need a logout icon. Using status icon as placeholder if needed, or no icon -->

</PreferenceScreen>
